# centimators

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
__marimo__/session/: transform.py.json
api-reference/dspymator/: index.html
api-reference/feature_transformers/: index.html
api-reference/keras_cortex/: index.html
api-reference/losses/: index.html
api-reference/model_estimators/: index.html
assets/js/: runllm-widget.js
docs/: index.md  installation-quick-start.md  user-guide.md
docs/api-reference/: cortex.md  dspymator.md  feature_transformers.md  keras_cortex.md  losses.md  model_estimators.md
docs/scripts/: visualize_feature_exposure.py
docs/tutorials/: cortex.ipynb  dspymator.ipynb  keras-cortex.ipynb  playground.py
docs/user-guide/: advanced-pipelines.md  dspymator.md  feature-transformers.md  keras-cortex.md  model-estimators.md
installation-quick-start/: index.html
playground/: playground.ipynb  playground.py
scripts/visualize_feature_exposure/: index.html
search/: search_index.json
src/centimators/: __init__.py  data_transformers.py  feature_transformers.py  horizontal_utils.py  keras_cortex.py  losses.py  model_estimators.py  narwhals_utils.py
tests/: test_feature_transformers.py  test_model_estimators.py  test_neutralization.py  test_penalizer_comparison.py
tutorials/dspymator/: index.html
tutorials/keras-cortex/: index.html
tutorials/playground/: index.html
user-guide/advanced-pipelines/: index.html
user-guide/dspymator/: index.html
(+20 files in other folders)
